--- a/pages/inicio-admin.html
+++ b/pages/inicio-admin.html
@@ -20,27 +20,20 @@
 
             <nav>
                 <ul>
-                    <li><a href="/pages/inicio.html">Início</a></li>
+                    <li><a href="/pages/inicio-admin.html">Painel</a></li>
                     <li><a href="/pages/adicionar-evento.html">Adicionar Evento</a></li>
                     <li><a href="/pages/sairconta-evento.html">Sair da Conta</a></li>
                 </ul>
             </nav>
-
-
-            <div class="profile-icon">
-                <a href="/pages/perfil.html"> <!-- Ajustei o link para algo mais relevante -->
-                    <i class="fas fa-user"></i> <!-- Ícone do perfil -->
-                </a>
-            </div>
         </header>
     </section>
 
     <section id="shows-description">
         <div class="cards-tittle-description">
-            <h1 class="tittle-inicio">Inicio do Administrador</h1>
-            <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
-                pelo
-                Ingressa</p>
+            <h1 class="tittle-inicio">Painel do Administrador</h1>
+            <p class="text-inicio">Acompanhe e gerencie seus eventos com facilidade. Consulte a quantidade de eventos
+                ativos, excluídos e cadastre novos sempre que quiser. Tenha total controle sobre suas criações e
+                mantenha seus eventos sempre atualizados.</p>
         </div>
     </section>
 
@@ -54,16 +47,27 @@
             <strong>Eventos Excluídos</strong>
             <p>1</p>
         </div>
+
+        <div class="cadastrar-evento">
+            <strong>Cadastro de Evento</strong>
+            <p>Clique no botão abaixo para cadastrar seu evento e começar a gerar renda com a venda de ingressos!
+                Informe o nome do evento, o valor dos ingressos, descrição e todos os detalhes necessários para que seus
+                clientes possam comprar de forma rápida e segura.
+            </p>
+            <a href="adicionar-evento.html" class="btn">Cadastrar Evento</a>
+
+        </div>
     </section>
 
     <section id="cards-crud">
         <div class="crud-evento">
-            <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto MC Paiva">
-            <p>teste</p>
-            <i class="fas fa-pen"></i> <!-- Ícone lápis preenchido -->
+            <div class="evento-cardzinho">
+                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto MC Paiva">
+                <p>Titulo do Evento do Administrador</p>
+            </div>
+            <div class="icones">
+                <i class="fas fa-pen"></i> <!-- Ícone lápis preenchido -->
+                <i class="fas fa-times"></i>
+            </div>
         </div>
     </section>
-
-
-
-   
