refeito pagina inicial com cards, novo html e css

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -55,39 +55,32 @@
 
 
 
-    <section id="cards">
-        <section class="cards-junction">
-            <section id="cards-content">
-                <div class="cards-image">
-                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
-                </div>
 
-                <div class="cards-title-description">
-                    <span class="title-card">Show do Mc Paiva na Zuhause</span>
-                    <p class="description-card">Não perca a Festa do Branco com Mc Paiva ZS na Zuhause! A melhor festa da noite!</p>
-                </div>
+    <section id="cards-junction">
+        <section id="card">
+            <div id="card-evento">
+                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Evento">
+                <strong id="titulo-evento">Show do Mc Paiva na Zuhause</strong>
+                <p id="descricao-evento">Venha comparecer no maior evento com o maior MC de São Paulo, MC Paiva ma
+                    Zuhause
+                    em Boituva, noite de muito funk, bebida e diversão!</p>
+            </div>
 
-                <div class="cards-information">
-                    <div class="cards-date">
-                        <div class="cards-dayweek">
-                            <span>Sábado</span>
-                        </div>
-                        <span>26 de Abril</span>
+            <div id="card-evento-informacao">
+                <div>
+                    <span class="dia-semana">Quarta Feira</span>
+                    <div>
+                        <span class="dia-mes">15 de Abril</span>
                         <span> - </span>
-                        <span>22h</span>
-                    </div>
-
-                    <div class="cards-ingresso">
-                        <button>Ingressos</button>
+                        <span class="hora-evento">23h00</span>
                     </div>
                 </div>
-            </section>
+
+                <button id="btn-ingressos"
+                    onclick="window.location.href='/static/pages/informacoes-evento.html?id=38'">Ingressos</button>
+            </div>
         </section>
     </section>
-
-
-
-
 
 
 
