pequenos ajustes no css, pagina de inicio finalizada

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style-inicio.css">
+    <link rel="stylesheet" href="/static/css/style-inicio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Ingressa</title>
 
@@ -15,7 +15,7 @@
     <section class="nav-ingressa">
         <header>
             <div class="logo-ingressa">
-                <img src="/assets/img/ingressa-logo-transp.png" alt="Logotipo Ingressa">
+                <img src="/static/assets/ingressa-logo-transp.png" alt="Logotipo Ingressa">
             </div>
 
             <nav>
@@ -53,13 +53,10 @@
         </div>
     </section>
 
-
-
-
     <section id="cards-junction">
         <section id="card">
             <div id="card-evento">
-                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Evento">
+                <img src="/static/assets/teste-fotomcpaiva.png" alt="Foto do Evento">
                 <strong id="titulo-evento">Show do Mc Paiva na Zuhause</strong>
                 <p id="descricao-evento">Venha comparecer no maior evento com o maior MC de São Paulo, MC Paiva ma
                     Zuhause
@@ -83,29 +80,7 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="/scripts/inicio.js"></script>
+    <script src="/static/scripts/inicio.js"></script>
 </body>
 
 </html>
